--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/TimBrielmayer/InformatikWebseite#readme",
   "dependencies": {
     "express": "^4.18.2",
+    "express-session": "^1.18.0",
     "sqlite3": "^5.1.7"
   }
 }
